--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,17 @@
 .externalNativeBuild
 .cxx
 
+.settings
+.project
+.classpath
+.vscode
+build
+Pods
+xcuserdata
+local.gradle
+kotlin-js-store/
+moko-resources-generated.js
+
 # Local configuration file (sdk path, etc)
 /local.properties
 /keystore.properties
