--- a/android/activity/src/main/AndroidManifest.xml
+++ b/android/activity/src/main/AndroidManifest.xml
@@ -2,4 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.petsapp.petfinder.activity">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <application>
+
+        <activity
+            android:name="com.petsapp.petfinder.activity.MainActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout"
+            android:exported="true"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+    </application>
+
 </manifest>
