--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,14 @@
+use_frameworks!
+platform :ios, '14.0'
+
 target 'ios' do
-  use_frameworks!
-  platform :ios, '14.1'
+  
   pod 'shared', :path => '../shared'
+  
+  pod 'UIPilot', '~> 1.3.1'
+  
+  pod 'SDWebImageSwiftUI'
+  
+  pod 'ToastSwiftUI'
+  
 end
