--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,26 @@
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.parallel=true
+org.gradle.caching=true
+
+#Android
+android.useAndroidX=true
+android.enableJetifier=true
+android.enableResourceOptimizations=true
+android.nonTransitiveRClass=true
+#android.enableR8.fullMode=true
+
+#iOS
+xcodeproj=./ios
 
 #Kotlin
 kotlin.code.style=official
 
-#Android
-android.useAndroidX=true
-
 #MPP
-kotlin.mpp.enableGranularSourceSetsMetadata=true
-kotlin.native.enableDependencyPropagation=false
-kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.stability.nowarn=true
+#kotlin.mpp.enableCInteropCommonization=true
+#kotlin.mpp.enableGranularSourceSetsMetadata=true
+#kotlin.native.enableDependencyPropagation=false
+
+# New memory model
+kotlin.native.binary.memoryModel=experimental
