--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ kotlin.code.style=official
 
 #MPP
 kotlin.mpp.stability.nowarn=true
-#kotlin.mpp.enableCInteropCommonization=true
-#kotlin.mpp.enableGranularSourceSetsMetadata=true
-#kotlin.native.enableDependencyPropagation=false
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.enableGranularSourceSetsMetadata=true
+kotlin.native.enableDependencyPropagation=false
 
 # New memory model
 kotlin.native.binary.memoryModel=experimental
