--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,15 +34,13 @@ accompanist = "0.25.1"
 [libraries]
 
 gradlePlugin-buildTools = { module = "com.android.tools.build:gradle", version = "7.2.2" }
-gradlePlugin-googleServices = { module = "com.google.gms:google-services", version = "4.3.10" }
 gradlePlugin-navigation-safeArgs = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidx-navigation" }
 gradlePlugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-gradlePlugin-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-gradle", version = "2.8.1" }
 gradlePlugin-kotlinSerialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
 gradlePlugin-ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version = "10.2.1" }
 gradlePlugin-dependency-check = { module = "com.github.ben-manes:gradle-versions-plugin", version = "0.42.0" }
 gradlePlugin-buildkonfig = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version = "0.7.0" }
-gradlePlugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version = "1.19.0" }
+gradlePlugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version = "1.21.0" }
 gradlePlugin-realm = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
 gradlePlugin-mokoResources = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
 
@@ -142,14 +140,12 @@ junit = { module = "junit:junit", version = "4.13.2" }
 [bundles]
 gradlePlugins = [
     "gradlePlugin-buildTools",
-    "gradlePlugin-googleServices",
     "gradlePlugin-navigation-safeArgs",
     "gradlePlugin-kotlin",
-    "gradlePlugin-firebase-crashlytics",
     "gradlePlugin-kotlinSerialization",
-    "gradlePlugin-ktlint",
     "gradlePlugin-realm",
-    "gradlePlugin-mokoResources"
+    "gradlePlugin-mokoResources",
+    "gradlePlugin-ktlint"
 ]
 app-ui = [
     "androidx-compose-compiler",
