--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,12 +37,14 @@ gradlePlugin-buildTools = { module = "com.android.tools.build:gradle", version =
 gradlePlugin-navigation-safeArgs = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidx-navigation" }
 gradlePlugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 gradlePlugin-kotlinSerialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
-gradlePlugin-ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version = "10.2.1" }
-gradlePlugin-dependency-check = { module = "com.github.ben-manes:gradle-versions-plugin", version = "0.42.0" }
 gradlePlugin-buildkonfig = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version = "0.7.0" }
-gradlePlugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version = "1.21.0" }
 gradlePlugin-realm = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
 gradlePlugin-mokoResources = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
+
+gradlePlugin-ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version = "10.2.1" }
+gradlePlugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version = "1.21.0" }
+gradlePlugin-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version = "6.10.0" }
+gradlePlugin-dependency-check = { module = "com.github.ben-manes:gradle-versions-plugin", version = "0.42.0" }
 
 
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
