--- a/gradle.properties
+++ b/gradle.properties
@@ -19,8 +19,8 @@ kotlin.code.style=official
 #MPP
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
-kotlin.mpp.enableGranularSourceSetsMetadata=true
-kotlin.native.enableDependencyPropagation=false
+#kotlin.mpp.enableGranularSourceSetsMetadata=true
+#kotlin.native.enableDependencyPropagation=false
 
 # New memory model
 kotlin.native.binary.memoryModel=experimental
