--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,12 +11,12 @@ versionCode = "1"
 versionName = "0.1"
 
 # Dependencies
-coroutines = "1.6.3"
+coroutines = "1.6.3-native-mt"
 multiplatformSettings = "0.9"
 koin = "3.2.0"
 kotlin = "1.7.10"
-ktor = "2.0.3"
-realm = "1.0.1"
+ktor = "2.1.1"
+realm = "1.1.0"
 coil = "2.1.0"
 moko-resources = "0.20.1"
 moko-paging = "0.7.2"
@@ -27,7 +27,7 @@ androidx-lifecycle = "2.5.1"
 androidx-navigation = "2.5.1"
 androidx-constraintlayout = "1.0.1"
 androidx-compose = "1.2.1"
-compose-compiler = "1.3.0"
+compose-compiler = "1.3.1"
 compose-material3 = "1.0.0-beta01"
 accompanist = "0.25.1"
 
