--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ kotlin.code.style=official
 #MPP
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.native.binary.objcExportSuspendFunctionLaunchThreadRestriction=none
 #kotlin.mpp.enableGranularSourceSetsMetadata=true
 #kotlin.native.enableDependencyPropagation=false
 
