--- a/petsearch-ios/Podfile
+++ b/petsearch-ios/Podfile
@@ -5,4 +5,5 @@ target 'petsearch-ios' do
   pod 'UIPilot', '~> 1.3.1'
   pod 'SDWebImageSwiftUI'
   pod 'ToastSwiftUI'
+  pod 'ScalingHeaderScrollView'
 end
