--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,11 @@ compose-compiler = "1.3.1"
 compose-material3 = "1.0.0-beta01"
 accompanist = "0.25.1"
 
+testing-kotest = "5.4.2"
+testing-arch-core = "2.1.0"
+testing-junit = "4.13.2"
+testing-junitext = "1.1.4-alpha05"
+testing-junit5 = "5.9.1"
 
 [libraries]
 
@@ -136,7 +141,20 @@ kermit-crashlytics = { module = "co.touchlab:kermit-crashlytics", version.ref = 
 
 
 squareup-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.8.1" }
+
 junit = { module = "junit:junit", version = "4.13.2" }
+
+testing-kotest-assertions = { module = "io.kotest:kotest-assertions-core", version.ref = "testing-kotest" }
+testing-kotest-runner = { module = "io.kotest:kotest-runner-junit5", version.ref = "testing-kotest" }
+
+testing-androidx-core = { module = "androidx.arch.core:core-testing", version.ref = "testing-arch-core" }
+testing-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "testing-junitext" }
+
+testing-junit5-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "testing-junit5" }
+testing-junit5-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "testing-junit5" }
+testing-junit5-vintage = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "testing-junit5" }
+
+testing-turbine = { module = "app.cash.turbine:turbine", version = "0.11.0" }
 
 
 [bundles]
