--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,22 +27,28 @@ androidx-navigation = "2.5.1"
 androidx-constraintlayout = "1.0.1"
 androidx-compose = "1.2.1"
 compose-compiler = "1.3.1"
-compose-material3 = "1.0.0-beta01"
+compose-material3 = "1.0.0-beta03"
 accompanist = "0.25.1"
 
-testing-kotest = "5.4.2"
+testing-kotest = "5.5.0"
 testing-arch-core = "2.1.0"
 testing-junit = "4.13.2"
 testing-junitext = "1.1.4-alpha05"
 testing-junit5 = "5.9.1"
 
+[plugins]
+moko-resources = { id = "dev.icerock.mobile.multiplatform-resources", version.ref = "moko-resources" }
+realm-kotlin = { id = "io.realm.kotlin", version.ref = "realm" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotest-multiplatform = { id = "io.kotest.multiplatform", version.ref = "testing-kotest" }
+codingfeline-buildkonfig = { id = "com.codingfeline.buildkonfig", version = "0.13.3" }
+
 [libraries]
 
-gradlePlugin-buildTools = { module = "com.android.tools.build:gradle", version = "7.2.2" }
+gradlePlugin-buildTools = { module = "com.android.tools.build:gradle", version = "7.3.0" }
 gradlePlugin-navigation-safeArgs = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidx-navigation" }
 gradlePlugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 gradlePlugin-kotlinSerialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
-gradlePlugin-buildkonfig = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version = "0.7.0" }
 gradlePlugin-realm = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
 gradlePlugin-mokoResources = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
 
@@ -53,7 +59,6 @@ gradlePlugin-dependency-check = { module = "com.github.ben-manes:gradle-versions
 
 
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
-kotlin-test = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 
 
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.3.3" }
@@ -144,8 +149,10 @@ squareup-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", v
 
 junit = { module = "junit:junit", version = "4.13.2" }
 
+testing-kotest-jvm = { module = "io.kotest:kotest-runner-junit5", version.ref = "testing-kotest" }
+testing-kotest-native = { module = "io.kotest:kotest-framework-engine", version.ref = "testing-kotest" }
 testing-kotest-assertions = { module = "io.kotest:kotest-assertions-core", version.ref = "testing-kotest" }
-testing-kotest-runner = { module = "io.kotest:kotest-runner-junit5", version.ref = "testing-kotest" }
+testing-kotest-property = { module = "io.kotest:kotest-property", version.ref = "testing-kotest" }
 
 testing-androidx-core = { module = "androidx.arch.core:core-testing", version.ref = "testing-arch-core" }
 testing-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "testing-junitext" }
@@ -193,13 +200,6 @@ ktor-common = [
     "ktor-client-serialization",
     "ktor-serialization-kotlinx-json",
     "ktor-client-contentNegotiation"
-]
-shared-commonTest = [
-    "kotlin-test",
-    "multiplatformSettings-test",
-    "koin-test",
-    "kotlinx-coroutines-test",
-    "ktor-client-mock"
 ]
 shared-androidTest = [
     "androidx-test-junit",
