--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,13 +15,13 @@ versionCode = "1"
 versionName = "0.1"
 
 # Dependencies
-coroutines = "1.6.3"
+kotlin = "1.7.20"
+coroutines = "1.6.4"
 multiplatformSettings = "0.9"
 koin = "3.2.0"
-kotlin = "1.7.10"
-ktor = "2.0.3"
-realm = "1.1.0"
-coil = "2.2.1"
+ktor = "2.1.2"
+realm = "1.2.0"
+coil = "2.2.2"
 moko-resources = "0.20.1"
 kermit = "1.1.3"
 
@@ -30,8 +30,8 @@ androidx-lifecycle = "2.5.1"
 androidx-navigation = "2.5.1"
 androidx-constraintlayout = "1.0.1"
 androidx-compose = "1.2.1"
-compose-compiler = "1.3.1"
-compose-material3 = "1.0.0-beta03"
+compose-compiler = "1.3.2"
+compose-material3 = "1.0.0-rc01"
 accompanist = "0.25.1"
 
 testing-kotest = "5.5.0"
@@ -67,14 +67,14 @@ gradlePlugin-dependency-check = { module = "com.github.ben-manes:gradle-versions
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 
 
-kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.3.3" }
+kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.4.0" }
 kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version = "0.4.0" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
 
-android-desugaring = { module = "com.android.tools:desugar_jdk_libs", version = "1.1.5" }
+android-desugaring = { module = "com.android.tools:desugar_jdk_libs", version = "1.2.2" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.8.0" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.4.2" }
 androidx-test-junit = { module = "androidx.test.ext:junit-ktx", version = "1.1.3" }
