--- a/petsearch-ios/Podfile
+++ b/petsearch-ios/Podfile
@@ -4,5 +4,6 @@ target 'petsearch-ios' do
   pod 'Shared', :path => '../petsearch-shared/Shared'
   pod 'UIPilot', '~> 1.3.1'
   pod 'SDWebImageSwiftUI'
+  pod 'SDWebImageSVGCoder'
   pod 'ToastSwiftUI'
 end
