--- a/petsearch-android/activity/src/main/AndroidManifest.xml
+++ b/petsearch-android/activity/src/main/AndroidManifest.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.msa.petsearch.activity">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.VIBRATE" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
 
