--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ coil = "2.2.2"
 moko-resources = "0.20.1"
 kermit = "1.1.3"
 
-androidx-activity = "1.5.1"
+androidx-activity-compose = "1.6.0"
 androidx-lifecycle = "2.5.1"
 androidx-navigation = "2.5.1"
 androidx-constraintlayout = "1.0.1"
@@ -75,9 +75,7 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 
 
 android-desugaring = { module = "com.android.tools:desugar_jdk_libs", version = "1.2.2" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.8.0" }
-androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.4.2" }
-androidx-test-junit = { module = "androidx.test.ext:junit-ktx", version = "1.1.3" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.9.0" }
 
 androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
 androidx-compose-ui-runtime = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose" }
@@ -86,7 +84,7 @@ androidx-compose-ui-util = { module = "androidx.compose.ui:ui-util", version.ref
 androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "androidx-compose" }
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "androidx-compose" }
 androidx-compose-constraintlayout = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "androidx-constraintlayout" }
-androidx-compose-activity = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
+androidx-compose-activity = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
 androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "androidx-compose" }
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version = "3.1.1" }
 androidx-compose-paging = { module = "androidx.paging:paging-compose", version = "1.0.0-alpha16" }
@@ -165,6 +163,7 @@ testing-kotest-ext-koin = { module = "io.kotest.extensions:kotest-extensions-koi
 
 testing-androidx-core = { module = "androidx.arch.core:core-testing", version.ref = "testing-arch-core" }
 testing-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "testing-junitext" }
+testing-androidx-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "testing-junitext" }
 
 testing-junit5-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "testing-junit5" }
 testing-junit5-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "testing-junit5" }
@@ -203,8 +202,3 @@ ktor-common = [
     "ktor-serialization-kotlinx-json",
     "ktor-client-contentNegotiation"
 ]
-shared-androidTest = [
-    "androidx-test-junit",
-    "kotlinx-coroutines-test",
-]
-
