--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,21 +18,21 @@ versionName = "0.1"
 kotlin = "1.7.20"
 coroutines = "1.6.4"
 multiplatformSettings = "0.9"
-koin = "3.2.0"
+koin = "3.2.2"
 ktor = "2.1.2"
 realm = "1.4.0"
 coil = "2.2.2"
 moko-resources = "0.20.1"
 kermit = "1.1.3"
 
-androidx-activity-compose = "1.6.0"
+androidx-activity-compose = "1.6.1"
 androidx-lifecycle = "2.5.1"
-androidx-navigation = "2.5.1"
+androidx-navigation = "2.5.3"
 androidx-constraintlayout = "1.0.1"
-androidx-compose = "1.2.1"
+androidx-compose = "1.3.0"
 compose-compiler = "1.3.2"
-compose-material3 = "1.0.0-rc01"
-accompanist = "0.25.1"
+compose-material3 = "1.0.0"
+accompanist = "0.27.0"
 
 testing-kotest = "5.5.0"
 testing-arch-core = "2.1.0"
