Update dependencies and Optimize project

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ android.nonTransitiveRClass=true
 #android.enableR8.fullMode=true
 
 #iOS
-xcodeproj=./ios
+xcodeproj=./petsearch-iOS/petsearch-ios.xcodeproj
 
 #Kotlin
 kotlin.code.style=official
@@ -19,6 +19,3 @@ kotlin.code.style=official
 #MPP
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
-
-# New memory model
-kotlin.native.binary.memoryModel=experimental
