--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,12 +15,12 @@ versionCode = "1"
 versionName = "0.1"
 
 # Dependencies
-kotlin = "1.7.20"
+kotlin = "1.7.21"
 coroutines = "1.6.4"
 multiplatformSettings = "0.9"
 koin = "3.2.2"
-ktor = "2.1.2"
-realm = "1.4.0"
+ktor = "2.1.3"
+realm = "1.5.0"
 coil = "2.2.2"
 moko-resources = "0.20.1"
 kermit = "1.1.3"
@@ -29,10 +29,10 @@ androidx-activity-compose = "1.6.1"
 androidx-lifecycle = "2.5.1"
 androidx-navigation = "2.5.3"
 androidx-constraintlayout = "1.0.1"
-androidx-compose = "1.3.0"
-compose-compiler = "1.3.2"
-compose-material3 = "1.0.0"
-accompanist = "0.27.0"
+androidx-compose = "1.3.1"
+compose-compiler = "1.4.0-alpha02"
+compose-material3 = "1.0.1"
+accompanist = "0.27.1"
 
 testing-kotest = "5.5.0"
 testing-arch-core = "2.1.0"
