Optimize Build Configuration

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,10 @@
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -XX:+UseParallelGC
 org.gradle.parallel=true
 org.gradle.caching=true
 
 #Android
 android.useAndroidX=true
-android.enableJetifier=true
 android.enableResourceOptimizations=true
 android.nonTransitiveRClass=true
 #android.enableR8.fullMode=true
