--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ kotlin.code.style=official
 #MPP
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
