--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@
 project-version = "1.0"
 
 # Language Versions
-kt = "1.7"
+kt = "1.8"
 java = "11"
 
 ## SDK Versions
@@ -15,93 +15,122 @@ versionCode = "1"
 versionName = "0.1"
 
 # Dependencies
-accompanist = "0.27.1"
-androidx-activity-compose = "1.6.1"
-androidx-compose = "1.3.1"
+accompanist = "0.29.0-alpha"
+android-material = "1.7.0"
+androidx-activity = "1.6.1"
+androidx-compose = "1.4.0-alpha04"
+androidx-compose-compiler = "1.4.0"
+androidx-compose-material3 = "1.1.0-alpha04"
+androidx-compose-paging = "1.0.0-alpha16"
 androidx-constraintlayout = "1.0.1"
-androidx-lifecycle = "2.6.0-alpha03"
-androidx-navigation = "2.5.3"
+androidx-core-ktx = "1.9.0"
+androidx-lifecycle = "2.6.0-alpha04"
+androidx-navigation = "2.6.0-alpha04"
+androidx-room = "2.5.0"
+chrisbanes-snapper = "0.3.0"
 coil = "2.2.2"
-compose-compiler = "1.4.0-alpha02"
-compose-material3 = "1.0.1"
 coroutines = "1.6.4"
-kermit = "1.1.3"
+desugar-jdk-libs = "1.2.2"
+gradle-plugin-android-build-tools = "7.4.0"
+gradle-plugin-buildkonfig = "0.7.0"
+gradle-plugin-dependency-check = "0.42.0"
+gradle-plugin-detekt = "1.22.0"
+gradle-plugin-ktlint = "11.0.0"
+gradle-plugin-spotless = "6.10.0"
+kermit = "1.2.2"
 koin = "3.2.2"
-kotlin = "1.7.21"
-ktor = "2.1.3"
+korlibs-klock = "2.2.0"
+kotlin = "1.8.0"
+kotlinx-dateTime = "0.4.0"
+kotlinx-serialization = "1.4.1"
+ksp = "1.8.0-1.0.8"
+ktor = "2.2.2"
+kuuuurt-multiplatform-paging = "0.4.7"
 moko-resources = "0.20.1"
-multiplatformSettings = "0.9"
-realm = "1.5.0"
+multiplatformSettings = "1.0.0"
+realm = "1.6.0"
+squareup-leakcanary = "2.9.1"
+squareup-okio = "3.2.0"
 testing-arch-core = "2.1.0"
 testing-junit = "4.13.2"
 testing-junit5 = "5.9.1"
 testing-junitext = "1.1.4-alpha05"
 testing-kotest = "5.5.4"
-testing-mockk = "1.12.5"
+testing-turbine = "0.12.1"
+uuid-multiplatform = "0.6.0"
 
 
 [plugins]
 codingfeline-buildkonfig = { id = "com.codingfeline.buildkonfig", version = "0.13.3" }
 kotest-multiplatform = { id = "io.kotest.multiplatform", version.ref = "testing-kotest" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 moko-resources = { id = "dev.icerock.mobile.multiplatform-resources", version.ref = "moko-resources" }
 realm-kotlin = { id = "io.realm.kotlin", version.ref = "realm" }
 
 
 [libraries]
-accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref ="accompanist" }
-accompanist-navigation-material = { module = "com.google.accompanist:accompanist-navigation-material", version.ref ="accompanist" }
-accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref ="accompanist" }
+accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
+accompanist-navigation-material = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
+accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
+accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanist" }
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
-android-desugaring = { module = "com.android.tools:desugar_jdk_libs", version = "1.2.2" }
-androidx-compose-activity = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
+android-desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar-jdk-libs" }
+android-material = { module = "com.google.android.material:material", version.ref = "android-material" }
+androidx-compose-activity = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "androidx-compose" }
-androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
+androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "androidx-compose-compiler" }
 androidx-compose-constraintlayout = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "androidx-constraintlayout" }
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "androidx-compose" }
 androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "androidx-compose" }
-androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-compose-material3" }
 androidx-compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
-androidx-compose-paging = { module = "androidx.paging:paging-compose", version = "1.0.0-alpha16" }
+androidx-compose-paging = { module = "androidx.paging:paging-compose", version.ref = "androidx-compose-paging" }
 androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "androidx-compose" }
 androidx-compose-ui-runtime = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose" }
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose" }
 androidx-compose-ui-util = { module = "androidx.compose.ui:ui-util", version.ref = "androidx-compose" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.9.0" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core-ktx" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
-androidx-lifecycle-runtimeCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-navigation-common = { module = "androidx.navigation:navigation-common-ktx", version.ref = "androidx-navigation" }
 androidx-navigation-runtime = { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "androidx-navigation" }
-androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version = "3.1.1" }
-chrisbanes-snapper = { module = "dev.chrisbanes.snapper:snapper", version = "0.2.2" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidx-room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidx-room" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "androidx-room" }
+androidx-room-test = { module = "androidx.room:room-testing", version.ref = "androidx-room" }
+chrisbanes-snapper = { module = "dev.chrisbanes.snapper:snapper", version.ref = "chrisbanes-snapper" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
-gradlePlugin-buildTools = { module = "com.android.tools.build:gradle", version = "7.3.1" }
-gradlePlugin-dependency-check = { module = "com.github.ben-manes:gradle-versions-plugin", version = "0.42.0" }
-gradlePlugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version = "1.22.0" }
-gradlePlugin-kotest-framework = { module = "io.kotest:kotest-framework-multiplatform-plugin-gradle", version.ref = "testing-kotest" }
-gradlePlugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-gradlePlugin-kotlinSerialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
-gradlePlugin-ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version = "10.2.1" }
-gradlePlugin-mokoResources = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
-gradlePlugin-navigation-safeArgs = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidx-navigation" }
-gradlePlugin-realm = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
-gradlePlugin-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version = "6.10.0" }
-junit = { module = "junit:junit", version = "4.13.2" }
+gradle-plugin-android-build-tools = { module = "com.android.tools.build:gradle", version.ref = "gradle-plugin-android-build-tools" }
+gradle-plugin-buildkonfig = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version.ref = "gradle-plugin-buildkonfig" }
+gradle-plugin-dependency-check = { module = "com.github.ben-manes:gradle-versions-plugin", version.ref = "gradle-plugin-dependency-check" }
+gradle-plugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "gradle-plugin-detekt" }
+gradle-plugin-kotest-framework = { module = "io.kotest:kotest-framework-multiplatform-plugin-gradle", version.ref = "testing-kotest" }
+gradle-plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+gradle-plugin-kotlinSerialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
+gradle-plugin-ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+gradle-plugin-ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "gradle-plugin-ktlint" }
+gradle-plugin-mokoResources = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
+gradle-plugin-navigation-safeArgs = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidx-navigation" }
+gradle-plugin-realm = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
+gradle-plugin-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "gradle-plugin-spotless" }
 kermit-crashlytics = { module = "co.touchlab:kermit-crashlytics", version.ref = "kermit" }
 kermit-log = { module = "co.touchlab:kermit", version.ref = "kermit" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 koin-androidx-navigation = { module = "io.insert-koin:koin-androidx-navigation", version.ref = "koin" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
-korlibs-klock = { module = "com.soywiz.korlibs.klock:klock", version = "2.2.0" }
-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
+korlibs-klock = { module = "com.soywiz.korlibs.klock:klock", version.ref = "korlibs-klock" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+kotlin-stdlib-jdk = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
-kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version = "0.4.0" }
-kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.4.0" }
+kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-dateTime" }
+kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
 ktor-client-contentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
@@ -111,42 +140,44 @@ ktor-client-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
 ktor-client-okHttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
-kuuuurt-multiplatform-paging = { module = "io.github.kuuuurt:multiplatform-paging", version = "0.4.7" }
+kuuuurt-multiplatform-paging = { module = "io.github.kuuuurt:multiplatform-paging", version.ref = "kuuuurt-multiplatform-paging" }
 moko-resources = { module = "dev.icerock.moko:resources", version.ref = "moko-resources" }
 moko-resources-compose = { module = "dev.icerock.moko:resources-compose", version.ref = "moko-resources" }
+moko-resources-test = { module = "dev.icerock.moko:resources-test", version.ref = "moko-resources" }
 multiplatformSettings-common = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
 multiplatformSettings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
 multiplatformSettings-noArg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "multiplatformSettings" }
 multiplatformSettings-test = { module = "com.russhwolf:multiplatform-settings-test", version.ref = "multiplatformSettings" }
 realm-kotlin = { module = "io.realm.kotlin:library-base", version.ref = "realm" }
-squareup-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.8.1" }
-squareup-okio = { module = "com.squareup.okio:okio", version = "3.2.0" }
+squareup-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "squareup-leakcanary" }
+squareup-okio = { module = "com.squareup.okio:okio", version.ref = "squareup-okio" }
 testing-androidx-core = { module = "androidx.arch.core:core-testing", version.ref = "testing-arch-core" }
 testing-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "testing-junitext" }
-testing-androidx-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "testing-junitext" }
+testing-androidx-junit-ext = { module = "androidx.test.ext:junit-ktx", version.ref = "testing-junitext" }
+testing-junit = { module = "junit:junit", version.ref = "testing-junit" }
 testing-junit5-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "testing-junit5" }
 testing-junit5-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "testing-junit5" }
 testing-junit5-vintage = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "testing-junit5" }
 testing-kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "testing-kotest" }
 testing-kotest-assertions-json = { module = "io.kotest:kotest-assertions-json", version.ref = "testing-kotest" }
-testing-kotest-ext-koin = { module = "io.kotest.extensions:kotest-extensions-koin", version = "1.1.0" }
 testing-kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "testing-kotest" }
 testing-kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "testing-kotest" }
 testing-kotest-property = { module = "io.kotest:kotest-property", version.ref = "testing-kotest" }
+testing-kotest-property-jvm = { module = "io.kotest:kotest-property-jvm", version.ref = "testing-kotest" }
 testing-kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "testing-kotest" }
-testing-mockk-common = { module = "io.mockk:mockk-common", version.ref = "testing-mockk" }
-testing-mockk-core = { module = "io.mockk:mockk", version.ref = "testing-mockk" }
-testing-turbine = { module = "app.cash.turbine:turbine", version = "0.11.0" }
-uuid-multiplatform = { module = "com.benasher44:uuid", version = "0.4.1" }
+testing-turbine = { module = "app.cash.turbine:turbine", version.ref = "testing-turbine" }
+uuid-multiplatform = { module = "com.benasher44:uuid", version.ref = "uuid-multiplatform" }
 
 [bundles]
 app-ui = [
     "accompanist-navigation-animation",
+    "accompanist-navigation-material",
     "accompanist-systemuicontroller",
     "androidx-compose-activity",
     "androidx-compose-animation",
     "androidx-compose-compiler",
     "androidx-compose-foundation",
+    "androidx-compose-material",
     "androidx-compose-material3",
     "androidx-compose-navigation",
     "androidx-compose-ui-runtime",
@@ -154,7 +185,7 @@ app-ui = [
     "androidx-compose-ui-util",
     "androidx-core-ktx",
     "androidx-lifecycle-runtime",
-    "androidx-lifecycle-runtimeCompose",
+    "androidx-lifecycle-runtime-compose",
     "androidx-lifecycle-viewmodel-compose",
     "androidx-navigation-common",
     "coil-compose",
