--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,15 +17,15 @@ versionName = "0.1"
 # Dependencies
 accompanist = "0.29.0-alpha"
 android-material = "1.7.0"
-androidx-activity = "1.6.1"
+androidx-activity = "1.7.0-beta01"
 androidx-compose = "1.4.0-alpha04"
-androidx-compose-compiler = "1.4.0"
-androidx-compose-material3 = "1.1.0-alpha04"
-androidx-compose-paging = "1.0.0-alpha16"
+androidx-compose-compiler = "1.4.2"
+androidx-compose-material3 = "1.1.0-alpha06"
+androidx-compose-paging = "1.0.0-alpha18"
 androidx-constraintlayout = "1.0.1"
 androidx-core-ktx = "1.9.0"
-androidx-lifecycle = "2.6.0-alpha04"
-androidx-navigation = "2.6.0-alpha04"
+androidx-lifecycle = "2.6.0-beta01"
+androidx-navigation = "2.6.0-alpha05"
 androidx-room = "2.5.0"
 chrisbanes-snapper = "0.3.0"
 coil = "2.2.2"
@@ -40,10 +40,10 @@ gradle-plugin-spotless = "6.10.0"
 kermit = "1.2.2"
 koin = "3.2.2"
 korlibs-klock = "2.2.0"
-kotlin = "1.8.0"
+kotlin = "1.8.10"
 kotlinx-dateTime = "0.4.0"
 kotlinx-serialization = "1.4.1"
-ksp = "1.8.0-1.0.8"
+ksp = "1.8.10-1.0.9"
 ktor = "2.2.2"
 kuuuurt-multiplatform-paging = "0.4.7"
 moko-resources = "0.20.1"
