Migrate iOS to BaseViewModel2

--- a/petsearch-ios/Podfile
+++ b/petsearch-ios/Podfile
@@ -6,4 +6,5 @@ target 'petsearch-ios' do
   pod 'SDWebImageSwiftUI'
   pod 'SDWebImageSVGCoder'
   pod 'ToastSwiftUI'
+  pod 'KMPNativeCoroutinesAsync', '0.13.3'
 end
