--- a/petsearch-ios/Podfile
+++ b/petsearch-ios/Podfile
@@ -7,4 +7,5 @@ target 'petsearch-ios' do
   pod 'SDWebImageSVGCoder'
   pod 'ToastSwiftUI'
   pod 'KMPNativeCoroutinesAsync', '1.0.0-ALPHA-8'
+  pod 'KMMViewModelSwiftUI', '1.0.0-ALPHA-7'
 end
