--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,55 +16,55 @@ versionName = "0.1"
 
 # Dependencies
 accompanist = "0.32.0"
-android-material = "1.10.0"
-androidx-activity = "1.8.0"
-androidx-compose = "1.5.4"
-androidx-compose-compiler = "1.5.3"
-androidx-compose-material3 = "1.1.2"
+android-material = "1.11.0"
+androidx-activity = "1.8.2"
+androidx-compose = "1.6.4"
+androidx-compose-compiler = "1.5.11"
+androidx-compose-material3 = "1.2.1"
 androidx-compose-paging = "3.2.1"
 androidx-constraintlayout = "1.0.1"
 androidx-core-ktx = "1.12.0"
-androidx-lifecycle = "2.6.2"
-androidx-navigation = "2.7.5"
-androidx-room = "2.6.0"
+androidx-lifecycle = "2.7.0"
+androidx-navigation = "2.7.7"
+androidx-room = "2.6.1"
 chrisbanes-snapper = "0.3.0"
 coil = "2.5.0"
 desugar-jdk-libs = "2.0.4"
-gradle-plugin-android-build-tools = "8.1.3"
-gradle-plugin-buildkonfig = "0.14.0"
+gradle-plugin-android-build-tools = "8.3.1"
+gradle-plugin-buildkonfig = "0.15.1"
 gradle-plugin-dependency-check = "0.47.0"
-gradle-plugin-detekt = "1.23.0"
+gradle-plugin-detekt = "1.23.4"
 gradle-plugin-ktlint = "11.0.0"
 gradle-plugin-spotless = "6.19.0"
-kermit = "2.0.2"
-koin-android = "3.5.0"
-koin-androidx-compose = "3.5.0"
-koin-core = "3.5.0"
-koin-core-coroutines = "3.5.0"
-koin-test = "3.5.0"
+kermit = "2.0.3"
+koin-android = "3.5.3"
+koin-androidx-compose = "3.5.3"
+koin-core = "3.5.3"
+koin-core-coroutines = "3.5.3"
+koin-test = "3.5.3"
 korlibs-klock = "2.2.0"
-kotlin = "1.9.10"
-kotlinx-coroutines = "1.7.3"
-kotlinx-dateTime = "0.4.1"
-kotlinx-serialization = "1.6.0"
-ksp = "1.9.10-1.0.13"
-ktor = "2.3.6"
+kotlin = "1.9.23"
+kotlinx-coroutines = "1.8.0"
+kotlinx-dateTime = "0.5.0"
+kotlinx-serialization = "1.6.3"
+ksp = "1.9.23-1.0.19"
+ktor = "2.3.9"
 kuuuurt-multiplatform-paging = "0.6.2"
-moko-resources = "0.23.0"
-multiplatformSettings = "1.1.0"
-realm = "1.12.0"
-rickclephas-nativecoroutines = "1.0.0-ALPHA-18"
-rickclephas-kmm-viewmodel = "1.0.0-ALPHA-14"
+moko-resources = "0.24.0-alpha-5"
+multiplatformSettings = "1.1.1"
+realm = "1.14.1"
+rickclephas-nativecoroutines = "1.0.0-ALPHA-27"
+rickclephas-kmm-viewmodel = "1.0.0-ALPHA-20"
 squareup-leakcanary = "2.12"
-squareup-okio = "3.6.0"
+squareup-okio = "3.7.0"
 testing-arch-core = "2.2.0"
 testing-junit = "4.13.2"
 testing-junit5 = "5.9.1"
-testing-junitext = "1.2.0-alpha01"
-testing-kotest = "5.7.2"
-testing-turbine = "1.0.0"
-touchlab-skie = "0.5.0"
-uuid-multiplatform = "0.8.0"
+testing-junitext = "1.2.0-alpha03"
+testing-kotest = "5.8.0"
+testing-turbine = "1.1.0"
+touchlab-skie = "0.6.2"
+uuid-multiplatform = "0.8.2"
 
 
 [plugins]
