Update libraries and pods

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,45 +18,45 @@ versionName = "0.1"
 accompanist = "0.34.0"
 android-material = "1.12.0"
 androidx-activity = "1.9.0"
-androidx-compose = "1.7.0-beta03"
+androidx-compose = "1.7.0-beta05"
 androidx-compose-material3 = "1.2.1"
 androidx-compose-paging = "3.3.0"
 androidx-constraintlayout = "1.0.1"
 androidx-core-ktx = "1.13.1"
-androidx-lifecycle = "2.8.2"
+androidx-lifecycle = "2.8.3"
 androidx-navigation = "2.7.7"
 androidx-room = "2.6.1"
 chrisbanes-snapper = "0.3.0"
 coil = "2.6.0"
 desugar-jdk-libs = "2.0.4"
-gradle-plugin-android = "8.5.0"
+gradle-plugin-android = "8.5.1"
 gradle-plugin-buildkonfig = "0.15.1"
 gradle-plugin-dependency-check = "0.51.0"
 gradle-plugin-detekt = "1.23.6"
 gradle-plugin-ktlint = "11.0.0"
 gradle-plugin-spotless = "6.25.0"
-kermit = "2.0.3"
-koin-bom = "3.6.0-Beta4"
+kermit = "2.0.4"
+kmp-nativecoroutines = "1.0.0-ALPHA-31"
+kmp-observableviewmodel = "1.0.0-BETA-3"
+koin-bom = "3.6.0-Beta5"
 korlibs-klock = "2.2.0"
 kotlin = "2.0.0"
 kotlinx-coroutines = "1.9.0-RC"
 kotlinx-dateTime = "0.6.0"
-kotlinx-serialization = "1.7.0"
+kotlinx-serialization = "1.7.1"
 ksp = "2.0.0-1.0.21"
-ktor = "2.3.11"
+ktor = "2.3.12"
 kuuuurt-multiplatform-paging = "0.6.2"
-moko-resources = "0.24.0"
+moko-resources = "0.24.1"
 multiplatformSettings = "1.1.1"
-realm = "2.0.0"
-kmp-nativecoroutines = "1.0.0-ALPHA-31"
-kmp-observableviewmodel = "1.0.0-BETA-3"
-squareup-leakcanary = "2.13"
+realm = "2.1.0"
+squareup-leakcanary = "2.14"
 squareup-okio = "3.9.0"
 testing-arch-core = "2.2.0"
 testing-junit = "4.13.2"
 testing-junit5 = "5.9.1"
-testing-junitext = "1.2.0-rc01"
-testing-kotest = "5.9.0"
+testing-junitext = "1.2.1"
+testing-kotest = "5.9.1"
 testing-turbine = "1.1.0"
 touchlab-skie = "0.8.2"
 uuid-multiplatform = "0.8.4"
